[package]
name = "vgpu_unlock-rs"
version = "2.3.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# `parking_lot` version 0.12 bumped their MSRV to 1.49, use 0.11 to stay compatible with 1.48.
[dependencies]
ctor = "0.1.21"
libc = "0.2.102"
parking_lot = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"

[features]
# Feature flag to enable syntactic sugar for proxmox users
proxmox = []
default = ["proxmox"]