[package]
name = "vgpu_unlock-rs"
description = "Unlock vGPU functionality for consumer-grade NVIDIA GPUs"
license = "MIT"
version = "2.3.1"
edition = "2018"

[package.metadata.deb]
name = "libvgpu-unlock-rs"
maintainer = "https://github.com/mbilker/vgpu_unlock-rs"
copyright = "2021 Jonathan Johansson, 2021 Matt Bilker"
license-file = ["LICENSE", "5"]
extended-description = ""
depends = "$auto"
recommends = "systemd, kmod"
section = "libs"
priority = "optional"
assets = [
  ["target/release/libvgpu_unlock_rs.so", "usr/lib/", "644"],
  ["examples/config.toml", "etc/vgpu_unlock/profile_override.toml", "644"],
  ["examples/modules.conf", "etc/modules-load.d/vgpu_unlock.conf", "644"],
  ["examples/blacklist.conf", "etc/modprobe.d/blacklist-vgpu_unlock.conf", "644"],
  ["examples/systemd.conf", "etc/systemd/system/nvidia-vgpud.service.d/vgpu_unlock.conf", "644"],
  ["examples/systemd.conf", "etc/systemd/system/nvidia-vgpu-mgr.service.d/vgpu_unlock.conf", "644"],
  ["README.md", "usr/share/doc/vgpu_unlock-rs/README.md", "644"],
]
conf-files = [
  "/etc/vgpu_unlock/profile_override.toml",
]

[lib]
crate-type = ["cdylib"]

# `parking_lot` version 0.12 bumped their MSRV to 1.49, use 0.11 to stay compatible with 1.48.
[dependencies]
ctor = "0.1.21"
libc = "0.2.102"
parking_lot = "0.11.2"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"

[features]
# Feature flag to enable syntactic sugar for proxmox users
proxmox = []
default = ["proxmox"]
