[package]
name = "vgpu_unlock-rs"
version = "2.5.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.2.7"
libc = "0.2.102"
parking_lot = "0.12.1"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.8.11"

[features]
# Feature flag to enable syntactic sugar for proxmox users
default = ["proxmox"]
proxmox = []
